--- a/index.html
+++ b/index.html
@@ -32,21 +32,21 @@
     <!-- content -->
     <section class="content">
         <article id="search-engine-optimization" class="contents">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+            <img src="./assets/images/search-engine-optimization.jpg" alt="A cartoon cloud on the cover a notebook containing the acronym SEO is surrounded by the words Content, Headings, Mobile Compatibility, Social Media, Link Building, and Backlink." class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </article>
         <article id="online-reputation-management" class="contents">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+            <img src="./assets/images/online-reputation-management.jpg" alt="A laptop coputer screen shows a bar graph of rising values underneath the word REPUTATION in bolded capital letters." class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </article>
         <article id="social-media-marketing" class="contents">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+            <img src="./assets/images/social-media-marketing.jpg" alt="Several people using devices sit around a table displaying playful icons and thought bubbles containing the words tweet, like, media, and share." class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
@@ -58,7 +58,7 @@
     <section class="benefits">
         <aside id="benefit-lead" class="benefit">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="A gearwheel over a funnel contains an arrow pointing downwards to a dollar sign." />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
@@ -66,7 +66,7 @@
         </aside>
         <aside id="benefit-brand" class="benefit">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="A light bulb surrounded by sound waves is shown directly above a shirt and tie." />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
@@ -74,7 +74,7 @@
         </aside>
         <aside id="benefit-cost" class="benefit">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="An encircled dollar sign appears in front of two additional dollar signs and a gearwheel." />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
